--- a/app/less/jingxuan.less
+++ b/app/less/jingxuan.less
@@ -1,10 +1,11 @@
 // icon-font 开始
+
 @font-face {font-family: "iconfont";
-  src: url('//at.alicdn.com/t/font_ibkiy8nxbjtf0f6r.eot?t=1478598472103'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_ibkiy8nxbjtf0f6r.eot?t=1478598472103#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_ibkiy8nxbjtf0f6r.woff?t=1478598472103') format('woff'), /* chrome, firefox */
-  url('//at.alicdn.com/t/font_ibkiy8nxbjtf0f6r.ttf?t=1478598472103') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_ibkiy8nxbjtf0f6r.svg?t=1478598472103#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_euqvg6za9b68byb9.eot?t=1478609322517'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_euqvg6za9b68byb9.eot?t=1478609322517#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_euqvg6za9b68byb9.woff?t=1478609322517') format('woff'), /* chrome, firefox */
+  url('//at.alicdn.com/t/font_euqvg6za9b68byb9.ttf?t=1478609322517') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_euqvg6za9b68byb9.svg?t=1478609322517#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -20,6 +21,8 @@
 
 .icon-weixin:before { content: "\3488"; }
 
+.icon-sousuo:before { content: "\e602"; }
+
 .icon-shouji:before { content: "\e625"; }
 
 .icon-weibo:before { content: "\e60a"; }
@@ -28,11 +31,17 @@
 
 .icon-youjian:before { content: "\e705"; }
 
+.icon-denglu:before { content: "\e603"; }
+
+.icon-jiantou:before { content: "\e604"; }
+
 .icon-douban:before { content: "\e60c"; }
 
 .icon-mima:before { content: "\e60b"; }
 
 .icon-mulu:before { content: "\e61c"; }
+
+.icon-maobi:before { content: "\e690"; }
 
 .icon-login:before { content: "\e607"; }
 
@@ -40,9 +49,338 @@
 
 .icon-a:before { content: "\e669"; }
 
-.icon-denglu:before { content: "\e640"; }
-
 .icon-google:before { content: "\e635"; }
 
 .icon-tuite:before { content: "\e601"; }
+
+
 // icon-font 结束
+
+.cxw-offset{
+  max-width: 1000px;
+  padding-left: 12px;
+  margin-left: 25.0%;
+  width: 58.33333%;
+  box-sizing: border-box;
+  float: left;
+  .page-title{
+    width: 749px;
+    position: fixed;
+    background: white;
+    border-width: 2px;
+    box-sizing: border-box;
+    z-index: 1;
+    padding-left: 20px;
+    border-bottom: 2px solid #d9d9d9;
+    font-size: 12px;
+    ul{
+      text-align: center;
+      li{
+        float: left;
+        line-height: 20px;
+        a{
+          padding: 15px;
+          display: inline-block;
+          transition: all 0.3s;
+          color: #999999;
+          &:hover{
+            background-color: #eeeeee;
+            color: #555555;
+          }
+        }
+      }
+      .active{
+        margin-bottom: -2px;
+        border-bottom: 2px solid #555555;
+        a{
+           color: #555555;
+        }
+      }
+      .search{
+        float: right;
+        margin-top: 10px;
+        input{
+          padding: 0px 14px 0px 14px;
+          border-radius: 15px;
+          width: 180px;
+          font-size: 14px;
+          line-height: 28px;
+          color: #555555;
+          display: inline-block;
+          background-color: white;
+          border: 1px solid #cccccc;
+          box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+          transition: border linear 0.2s, box-shadow linear 0.2s;
+          &:focus{
+            outline: none;
+            box-shadow: none;
+            border-color: rgba(82,168,236,0.8);
+          }
+        }
+      }
+    }
+  }
+  .navbar-user{
+    position: fixed;
+    top: 10px;
+    right: 0;
+    .login{
+      top: 7px;
+      float: right;
+      padding: 0 2px;
+      margin-right: 8px;
+      i{
+        display: inline-block;
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: inherit;
+        text-rendering: auto;
+      }
+    }
+  }
+  .list-container{
+    width: 749px;
+    padding-top: 50px;
+    .unstyled{
+      padding: 13px 0 0 30px;
+      li{
+        float: left;
+        margin: 10px 15px 5px 0;
+        line-height: 20px;
+        &.active{
+          a{
+            color: white;
+            border-color: #e78170;
+            background: #e78170;
+          }
+        }
+        a{
+          color: #555555;
+          padding: 5px 10px;
+          border: 1px solid #d9d9d9;
+          border-radius: 14px;
+          box-sizing: border-box;
+          font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+          font-size: 12px;
+          font-weight: normal;
+          line-height: 1.5;
+          &:hover{
+            color: #000;
+          }
+        }
+      }
+    }
+    .article-list{
+      padding-left: 36px;
+      margin: 35px 0 0;
+      li{
+        position: relative;
+        width: 100%;
+        padding-right: 2px;
+        padding-bottom: 17px;
+        margin: 0 0 17px;
+        border-bottom: 1px dashed #d9d9d9;
+        box-sizing: border-box;
+        word-wrap: break-word;
+      }
+      .have-img{
+        .wrap-img{
+          float: right;
+          width: 100px;
+          height: 100px;
+          img{
+            width: 100%;
+            height: 100px;
+            width: auto\9;
+            border-radius: 4px;
+            border: 1px solid #eeeeee;
+            box-sizing: border-box;
+          }
+        }
+        .list-top{
+          margin: 8px 0;
+          font-size: 12px;
+          .blue-link {
+            color: #4094c7;
+            &:hover{
+              color: #075b8d;
+            }
+          }
+          .time{
+            margin-left: 3px;
+            color: #717171;
+          }
+        }
+        .title{
+          margin-top: 0;
+          margin-bottom: 10px;
+          margin-left: 0;
+          display: inherit;
+          font-size: 18px;
+          font-weight: bold;
+          line-height: 1.5;
+          a:hover{
+            color: black;
+          }
+        }
+        .list-footer{
+            font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+            font-size: 12px;
+            font-weight: normal;
+            line-height: 20px;
+            a,span{
+              color: #999999;
+              &:hover{
+                color: #717171;
+              }
+            }
+        }
+      }
+      .app-download-guide{
+        .guide-wrap{
+          height: 140px;
+          border-radius: 4px;
+          border: 1px solid #e8e8e8;
+          background-image: linear-gradient(-180deg, #fbfbfb, #f4f4f4);
+          position: relative;
+          .btn-part{
+            width: 33%;
+            font-size: 0;
+            text-align: center;
+            vertical-align: middle;
+            display: inline-block;
+            .app-download-btn{
+              padding: 13px 16px;
+              font-size: 17px;
+              font-weight: bold;
+              color: white;
+              background-color: #e78170;
+              border-radius: 4px;
+              display: inline-block;
+              margin-right: 3px;
+              &:hover{
+                background-color: #f49484;
+              }
+            }
+            .qrcode{
+              margin-left: 10px;
+              padding: 7px 9px;
+              font-size: 16px;
+              background-color: white;
+              border-radius: 4px;
+              border: 1px solid gainsboro;
+              display: inline-block;
+              vertical-align: top;
+            }
+            .img{
+              position: absolute;
+              top: -170px;
+              left: 89.9375px;
+              border: 1px solid rgba(0,0,0,0.2);
+              box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+              display: none;
+            }
+          }
+          .text-part{
+            width: 33%;
+            text-align: center;
+            vertical-align: middle;
+            display: inline-block;
+            text-align: left;
+            li{
+              padding-right: 0px;
+              padding-bottom: 0px;
+              margin:  0px;
+              border-bottom: 0px dashed #d9d9d9;
+              font-size: 14px;
+              line-height: 2;
+            }
+          }
+          .guide-img{
+            max-width: 100%;
+            vertical-align: middle;
+            height: 100%;
+          }
+        }
+      }
+    }
+    .load-more{
+      margin-bottom: 30px;
+      text-align: center;
+      .ladda-button{
+        font-size: 18px;
+        cursor: pointer;
+        line-height: 20px;
+        background: #e78170;
+        padding: 14px 18px;
+        border-radius: 2px;
+        border: 1px solid transparent;
+        color: white;
+        font-family: Helvetica, Arial, "Hiragino Sans GB", sans-serif;
+        &:hover{
+          color: white;
+          border-color: #f49484;
+          background-color: #f49484;
+        }
+      }
+    }
+  }
+}
+.footer{
+  padding: 8px 0 10px 25%;
+  border-top: 1px solid #d9d9d9;
+  overflow: hidden;
+  color: #999999;
+  box-sizing: border-box;
+  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 20px;
+  .footer-l{
+    width: 505px;
+    float: left;
+    margin-left: 25px;
+    a{
+      color: #999999;
+      padding-right: 2px;
+      margin-right: 2px;
+      &:hover{
+        color: black;
+      }
+    }
+    p{
+      margin: 5px 0 0;
+      img{
+        width: 18px;
+        height: 18px;
+        vertical-align: bottom;
+      }
+    }
+  }
+  .footer-r{
+    float: right;
+    .app-download-btn{
+      margin-top: 12px;
+      display: inline-block;
+      vertical-align: middle;
+      a:after{
+        content: "";
+      }
+      a{
+        margin: 0 3px;
+        &:hover{
+          opacity: 0.7;
+        }
+        img{
+          width: 90px;
+        }
+      }
+    }
+    div{
+      display: inline-block;
+      vertical-align: middle;
+      i:hover{
+        color: #000;
+      }
+    }
+  }
+}
