--- a/app/view/jingxuan.html
+++ b/app/view/jingxuan.html
@@ -4,14 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>首页-简书</title>
-	<!-- inject:css -->
-	<link rel="stylesheet" href="/app-fc77234692.min.css">
-	<!-- endinject -->
+	
+	<link rel="stylesheet" href="../app-e00a4d067c.min.css">
+	
 	<script src="../bower_components/jquery/dist/jquery1.42.min.js"></script>
 	<script src="../bower_components/underscore/underscore.js"></script>
 	<script src="../bower_components/seajs/dist/sea.js"></script>
 </head>
 <body>
+	<nav id="nav"></nav>
 	<div class="cxw-offset">
 		<div class="page-title">
 			<ul class="clear">
@@ -22,10 +23,10 @@
 				</li>
 			</ul>
 		</div>
-		<div class="navbar-user">
+		<!-- <div class="navbar-user">
 			<a class="login" href="#"><i class="iconfont icon-denglu"></i>注册</a>
 			<a class="login" href="#"><i class="iconfont icon-login "></i>登录</a>
-		</div>
+		</div> -->
 		<div class="list-container">
 			<ul class="unstyled clear">
 				
