--- a/app/css/jingxuan.css
+++ b/app/css/jingxuan.css
@@ -70,7 +70,7 @@
 .cxw-offset {
   max-width: 1000px;
   padding-left: 12px;
-  margin-left: 25.0%;
+  margin-left: 28.0%;
   width: 58.33333%;
   -moz-box-sizing: border-box;
        box-sizing: border-box;
@@ -327,6 +327,7 @@
 .cxw-offset .list-container .load-more .ladda-button {
   font-size: 18px;
   cursor: pointer;
+  outline: none;
   line-height: 20px;
   background: #e78170;
   padding: 14px 18px;
@@ -341,7 +342,7 @@
   background-color: #f49484;
 }
 .footer {
-  padding: 8px 0 10px 25%;
+  padding: 8px 0 10px 28%;
   border-top: 1px solid #d9d9d9;
   overflow: hidden;
   color: #999999;
