--- a/app/less/jingxuan.less
+++ b/app/less/jingxuan.less
@@ -59,7 +59,7 @@
 .cxw-offset{
   max-width: 1000px;
   padding-left: 12px;
-  margin-left: 25.0%;
+  margin-left: 28.0%;
   width: 58.33333%;
   box-sizing: border-box;
   float: left;
@@ -309,6 +309,7 @@
       .ladda-button{
         font-size: 18px;
         cursor: pointer;
+        outline: none;
         line-height: 20px;
         background: #e78170;
         padding: 14px 18px;
@@ -326,7 +327,7 @@
   }
 }
 .footer{
-  padding: 8px 0 10px 25%;
+  padding: 8px 0 10px 28%;
   border-top: 1px solid #d9d9d9;
   overflow: hidden;
   color: #999999;
