--- a/app/view/jingxuan.html
+++ b/app/view/jingxuan.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>首页-简书</title>
-	<!-- inject:css -->
-	<link rel="stylesheet" href="/app-0f0be5c5b6.min.css">
-	<!-- endinject -->
+	
+	<link rel="stylesheet" href="../app-0f0be5c5b6.min.css">
+	
 	<script src="../bower_components/jquery/dist/jquery1.42.min.js"></script>
 	<script src="../bower_components/underscore/underscore.js"></script>
 	<script src="../bower_components/seajs/dist/sea.js"></script>
