--- a/app/view/nav.html
+++ b/app/view/nav.html
@@ -23,6 +23,6 @@
 <!-- ccl-nav 结束 -->
 <!-- ccl-login 开始 -->
 <div class="ccl-login">
-	<a href="#" title=""><span class="iconfont icon-login"></span>登录</a>
-	<a href="#" title=""><span class="iconfont icon-denglu"></span>注册</a>
+	<a href="sign.html" title=""><span class="iconfont icon-login"></span>登录</a>
+	<a href="sign.html" title=""><span class="iconfont icon-denglu"></span>注册</a>
 </div>
