--- a/app/less/choice.less
+++ b/app/less/choice.less
@@ -230,42 +230,42 @@
 		}
 		.page5{
 			.pan{
-				background-image: url("app/img/month5.jpg");
+				background-image: url("img/month5.jpg");
 			}
 		}
 		.page6{
 			.pan{
-				background-image: url("app/img/month6.jpg");
+				background-image: url("img/month6.jpg");
 			}
 		}
 		.page7{
 			.pan{
-				background-image: url("app/img//month7.jpg");
+				background-image: url("img//month7.jpg");
 			}
 		}
 		.page8{
 			.pan{
-				background-image: url("app/img/month8.jpg");
+				background-image: url("img/month8.jpg");
 			}
 		}
 		.page9{
 			.pan{
-				background-image: url("app/img/month9.jpg");
+				background-image: url("img/month9.jpg");
 			}
 		}
 		.page10{
 			.pan{
-				background-image: url("app/img/month10.jpg");
+				background-image: url("img/month10.jpg");
 			}
 		}
 		.page11{
 			.pan{
-				background-image: url("app/img/month11.jpg");
+				background-image: url("img/month11.jpg");
 			}
 		}
 		.page12{
 			.pan{
-				background-image: url("app/img/month12.jpg");
+				background-image: url("img/month12.jpg");
 			}
 		}
 	}
