--- a/app/less/choice.less
+++ b/app/less/choice.less
@@ -225,12 +225,12 @@
 		}
 		.page4{
 			.pan{
-				background-image: url("../img/month4.jpg");
+				background-image: url("img/month4.jpg");
 			}
 		}
 		.page5{
 			.pan{
-				background-image: url("img/month5.jpg");
+				background-image: url("month5.jpg");
 			}
 		}
 		.page6{
@@ -240,7 +240,7 @@
 		}
 		.page7{
 			.pan{
-				background-image: url("img//month7.jpg");
+				background-image: url("img/month7.jpg");
 			}
 		}
 		.page8{
