--- a/app/less/choice.less
+++ b/app/less/choice.less
@@ -210,7 +210,7 @@
 		}
 		.page1{
 			.pan{
-				background-image: url("app/img/month1.jpg");
+				background-image: url("/app/img/month1.jpg");
 			}
 		}
 		.page2{
@@ -225,7 +225,7 @@
 		}
 		.page4{
 			.pan{
-				background-image: url("img/month4.jpg");
+				background-image: url("/img/month4.jpg");
 			}
 		}
 		.page5{
