--- a/app/less/choice.less
+++ b/app/less/choice.less
@@ -210,7 +210,7 @@
 		}
 		.page1{
 			.pan{
-				background-image: url("app/img/month1.jpg");
+				background-image: url("https://nick2046.github.io/jianshu/app/img/month1.jpg");
 			}
 		}
 		.page2{
