--- a/app/less/choice.less
+++ b/app/less/choice.less
@@ -210,62 +210,62 @@
 		}
 		.page1{
 			.pan{
-				background-image: url("https://nick2046.github.io/jianshu/img/month1.jpg");
+				background-image: url(img/month1.jpg);
 			}
 		}
 		.page2{
 			.pan{
-				background-image: url("../img/month2.jpg");
+				background-image: url(img/month2.jpg);
 			}
 		}
 		.page3{
 			.pan{
-				background-image: url("../img/month3.jpg");
+				background-image: url(img/month3.jpg);
 			}
 		}
 		.page4{
 			.pan{
-				background-image: url("/img/month4.jpg");
+				background-image: url(img/month4.jpg);
 			}
 		}
 		.page5{
 			.pan{
-				background-image: url("month5.jpg");
+				background-image: url(img/month5.jpg);
 			}
 		}
 		.page6{
 			.pan{
-				background-image: url("img/month6.jpg");
+				background-image: url(img/month6.jpg);
 			}
 		}
 		.page7{
 			.pan{
-				background-image: url("img/month7.jpg");
+				background-image: url(img/month7.jpg);
 			}
 		}
 		.page8{
 			.pan{
-				background-image: url("img/month8.jpg");
+				background-image: url(img/month8.jpg);
 			}
 		}
 		.page9{
 			.pan{
-				background-image: url("img/month9.jpg");
+				background-image: url(img/month9.jpg);
 			}
 		}
 		.page10{
 			.pan{
-				background-image: url("img/month10.jpg");
+				background-image: url(img/month10.jpg);
 			}
 		}
 		.page11{
 			.pan{
-				background-image: url("img/month11.jpg");
+				background-image: url(img/month11.jpg);
 			}
 		}
 		.page12{
 			.pan{
-				background-image: url("img/month12.jpg");
+				background-image: url(img/month12.jpg);
 			}
 		}
 	}
