--- a/app/view/choice.html
+++ b/app/view/choice.html
@@ -23,7 +23,7 @@
 			<span class="item open-in-mobile"><i class="iconfont icon-weixin"></i>分享到微信</span>
 			<span class="item more">
 				<em>更多分享</em>
-				<i class="iconfont icon-jaintou"></i>
+				<i class="iconfont icon-jiantou"></i>
 				<ul class="dropdown-menu clear">
 					<li>
 						<a href=""><img src="../img/tweibo.png" alt="">分享到腾讯微博</a>
