--- a/app/view/jingxuan.html
+++ b/app/view/jingxuan.html
@@ -16,7 +16,7 @@
 	<div class="cxw-offset">
 		<div class="page-title">
 			<ul class="clear">
-				<li class="active"><a href="#">发现</a></li>
+				<li class="active"><a href="jingxuan.html">发现</a></li>
 				<li><a href="choice.html">2015精选</a></li>
 				<li class="search">
 					<input type="search" placeholder="搜索">
