--- a/app/view/sign.html
+++ b/app/view/sign.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<title>登录</title>
 		<link rel="stylesheet" type="text/css" href="../app-ecb5d9ab5d.min.css" />
+		<link rel='icon' href='../img/logo.png' type=‘image/x-ico’ />
 	</head>
 
 	<body>
