--- a/app/view/choice.html
+++ b/app/view/choice.html
@@ -6,6 +6,7 @@
 	<title></title>
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../app-ecb5d9ab5d.min.css">
+	<link rel='icon' href='../img/logo.png' type=‘image/x-ico’ />
 </head>
 <body>
 	<div class="ccl-nav"></div>
