--- a/app/view/nav-left.html
+++ b/app/view/nav-left.html
@@ -1,10 +1,10 @@
 <div class="ccl-nav-left">
-		<a href="#" title=""><span class="iconfont icon-jian xuanzhong"></span></a>
+		<a href="jingxuan.html" title=""><span class="iconfont icon-jian xuanzhong"></span></a>
 		<a href="#" title="">
 			<span class="iconfont icon-mulu">	
 			</span>
 			<div class="mulu">
-					<img src="../img/txt1.png" alt="">
+				<a href="choice.html"><img src="../img/txt1.png" alt=""></a>
 			</div>
 		</a>
 		<a href="index.html" title="">
