--- a/app/view/choice.html
+++ b/app/view/choice.html
@@ -263,7 +263,9 @@
 		seajs.config({
 			base:"./"
 		});
-		seajs.use('../js/choice.js')
+		seajs.use('../js/choice.js',function(a){
+			a.init();
+		})
 	</script>
 </body>
 </html>
