--- a/app/view/nav-left.html
+++ b/app/view/nav-left.html
@@ -1,5 +1,5 @@
 <div class="ccl-nav-left">
-		<a href="jingxuan.html" title=""><span class="iconfont icon-jian xuanzhong"></span></a>
+		<a href="index.html" title=""><span class="iconfont icon-jian xuanzhong"></span></a>
 		<a href="choice.html" title="">
 			<span class="iconfont icon-mulu">	
 			</span>
@@ -7,7 +7,7 @@
 				<img src="../img/txt1.png" alt="">
 			</div>
 		</a>
-		<a href="index.html" title="">
+		<a href="app.html" title="">
 			<span class="iconfont icon-shouji">
 				<div class="shouji">
 					<div class="txt2">
