--- a/app/view/sign.html
+++ b/app/view/sign.html
@@ -108,7 +108,9 @@
 			seajs.config({
 				base:'./'
 			});
-			seajs.use('../js/sign.js');
+			seajs.use('../js/sign.js',function(a){
+				a.init();
+			});
 		</script>
 	</body>
 
